[package]
name = "decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
amiquip = "0.4"
env_logger = "0.9"
wmm = "0.2.1"
time = "0.3.7"
regex = "1.5"
redis = "0.21.5"